--- a/src/app/components/About.css
+++ b/src/app/components/About.css
@@ -14,7 +14,7 @@
 }
 
 .ABOUT-TEXT-HEADER {
-    font-size: clamp(1.2rem, 4vw, 8rem);
+    font-size: clamp(2.1rem, 4vw, 8rem);
     font-family: "Inter", sans-serif;
     font-weight:bold;
     color: #fff;
@@ -60,6 +60,7 @@
 .image {
   margin-top: 5rem;
   width: 30vw;
+  min-width:20rem;
   border: 4px solid #dfdfdf;
   background-color: black;
   aspect-ratio: 1 / 1;
