--- a/src/app/components/Header.css
+++ b/src/app/components/Header.css
@@ -23,6 +23,7 @@
     color: white;
     text-decoration: none;
     margin-left: 2rem;
+    font-size: clamp(1rem, 1.2vw, 5rem);
     font-family: "Jura", monospace;
     font-weight: 100;
     transform: scale(1);
