--- a/src/app/components/Services.css
+++ b/src/app/components/Services.css
@@ -165,6 +165,27 @@ background: #0F0F0F;
     
   }
 
+
+
+}
+
+@media (max-width: 412px) {
+    .services {
+    padding: 0;
+
+
+  
+  }
+  .services-title {
+    text-align: center;
+    margin-bottom: 0;
+    margin-top: 28rem;
+    margin-bottom: 2rem;
+  }
+  .card {
+    border-radius: 0;
+  }
+  
 }
 
 @media (max-width: 1040px) {
